Apply: define-agent-exec-contract-v0-1

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "agent-shell"
 version = "0.1.0"
 edition = "2024"
 
+[[bin]]
+name = "agent-exec"
+path = "src/main.rs"
+
 [dependencies]
 anyhow = "1"
 clap = { version = "4", features = ["derive"] }
