--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ windows = { version = "0.58", features = [
     "Win32_Foundation",
     "Win32_System_JobObjects",
     "Win32_System_Threading",
+    "Win32_System_Diagnostics_ToolHelp",
 ] }
 
 [dev-dependencies]
