Update project structure and build configuration
- Include new directories for `skills`, `schema`, and `tests` in Cargo.toml
- Add `build.rs` to the included files list in Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,10 @@ keywords = ["agent", "job", "runner", "cli", "json"]
 categories = ["command-line-utilities", "development-tools"]
 include = [
     "/src/**",
+    "/skills/**",
+    "/schema/**",
+    "/tests/**",
+    "/build.rs",
     "/Cargo.toml",
     "/README.md",
     "/LICENSE",
